feat: add projects endpoint
